# Page-analyzer

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  settings.py
page_analyzer/services/: models.py  parser.py  processing.py  validator.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  show_url.html  urls_index.html
